<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="irregularModel"
            type="sk.sandeep.shreemicrofindemoapp.models.IrregularExpensesOverLastOneYearModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space15dp"
            tools:context=".fragments.IrregularExpensesOverLastOneYearFragment">


            <TextView
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical" />

            <EditText
                android:id="@+id/et_medical"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@={irregularModel.medical+""}' />


            <TextView
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/house_renovation" />

            <EditText
                android:id="@+id/et_house_renovation"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@={irregularModel.houseRenovation+""}' />


            <TextView
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchased_house_hold" />

            <EditText
                android:id="@+id/et_purchased_house_hold"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@={irregularModel.purchasedHouseHold+""}' />


            <TextView
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/function" />

            <EditText
                android:id="@+id/et_function"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@={irregularModel.function+""}' />


            <TextView
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />

            <EditText
                android:id="@+id/et_other"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@={irregularModel.other+""}' />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/LabelStyle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/space15dp"
                    android:text="@string/total_irregular_expanses_e"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_totalIrregularExpenses_E"
                    style="@style/LabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space15dp"
                    android:text='@{irregularModel.totalIrregularExpenses_e + ""}' />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</layout>